tests/compile_fail/borrow/generic_projection.stderr
error: `Borrow` cannot be derived for an associated type projection involving generic parameters because the impl can overlap with `core`'s blanket `Borrow` implementation
 --> tests/compile_fail/borrow/generic_projection.rs:6:15
  |
6 | struct Foo<T>(<Vec<T> as Trait>::Assoc)
  |               ^
